# GEAN

./: .gitignore  CMakeCache.txt  CMakeLists.txt  FAQ.md  GEAN.cbp  Makefile  README.md  cmake_install.cmake  configure  gean  gean manual.Rmd  song.cpp  updateLog
example/: transformMaizeGFFannotation.md
example/denovoVariantCalling/: README.md  align1.tbl  align2.tbl  align3.tbl  align4.tbl  align5.tbl  align6.tbl  summaryTheNewGff.pl
example/variantsSynchronization/: README.md
exportToHTML/: alignNeedlemanForTranscript_simd_avx2int32.cpp.html
googletest/googletest/: Makefile  cmake_install.cmake  gtest.cbp
script/: ComparingSpliceSitesWithJustLiftover.py  checkUnfinishedJob.pl  compareTwoFastaFile.pl  getPrimaryTranscriptSequenceFromGeanOutput.pl  mafftSubmit.pl  mafftSubmit_V1.1.pl  mergeSdi.pl
script/extractSequenceForCertainRegionFromAListOfAccessions/: extractSequenceForCertainRegionFromAListOfAccessions.py  list
script/fordebug/: undectedOrfNonCompletes.pl
script/plotSyntenicTwoGffFile/: generateTable.pl  plotTable.r
src/: InputParser.cpp  cns.cpp  controlLayer.cpp  controlLayer.h  song_cns.cpp  song_cns.h
src/control/: VariantsCountAsPhenotypeForAssociation.cpp  VariantsCountAsPhenotypeForAssociation.h  myControl.h  myCoordinateLiftOver.cpp  myCoordinateLiftOver.h  myReAnnotationAndExonerateAndNovo.cpp  myReAnnotationAndExonerateAndNovo.h
src/impl/: GetPseudoGenomeSequence.cpp  GetPseudoGenomeSequence.h  NucmerRead.cpp  NucmerRead.h  annotationLiftOver.cpp  annotationLiftOver.h  deNovoGenomeVariantCalling.cpp  deNovoGenomeVariantCalling.h  geneSyntenic.cpp  geneSyntenic.h  getSequencesFromGff.cpp  getSequencesFromGff.h  getSubsequence.cpp  impl.h  longestPath.cpp  longestPath.h  organizeGffRecords.cpp  organizeGffRecords.h  outPutORFConserveredTranscripts.cpp  outPutORFConserveredTranscripts.h  readGffFile.cpp  readGffFile.h  readGffFileWithEverything.cpp  readGffFileWithEverything.h  readSdiFile.cpp  readSdiFile.h
src/model/: AlignmentMatch.cpp  AlignmentMatch.h  OrthologPair.cpp  OrthologPair.h  Range.cpp  Range.h  Transcript.h  model.h
src/myImportandFunction/: alignNeedlemanForTranscript.cpp  alignNeedlemanForTranscript.h  alignNeedlemanForTranscript_simd_avx2int16.cpp  alignNeedlemanForTranscript_simd_avx2int16.h  alignNeedlemanForTranscript_simd_avx2int32.cpp  alignNeedlemanForTranscript_simd_avx2int32.h  alignNeedlemanForTranscript_simd_avx2int32_backup.cpp  alignNeedlemanForTranscript_simd_avx2int32_not_work.cpp  alignNeedlemanForTranscript_simd_avx2int32_old.cpp  alignNeedlemanForTranscript_simd_avx2int32_old.h  alignNeedlemanForTranscript_simd_avx2int32_oldv2.cpp  alignNeedlemanWunsch.cpp  alignNeedlemanWunsch.h  alignNeedlemanWunsch_simd.cpp  alignNeedlemanWunsch_simd.h  alignNeedlemanWunsch_v2.cpp  alignSlidingWindow.cpp  alignSlidingWindow.h  alignSlidingWindow_old1.cpp  alignTranscript.cpp  alignTranscript.h  geneAnnotationAlignment.cpp  geneAnnotationAlignment.h  hengAlign.cpp  hengAlign.h  hengAlignNotwork2.cpp  hengAlign_notgOOD.cpp  hengAlign_works.cpp  myImportantFunction.h
src/service/: TransferGffWithNucmerResult.cpp  TransferGffWithNucmerResult.h  TransferGffWithNucmerResult2.cpp  UpdateVariants.cpp  UpdateVariants.h  deNovoGenomeVariantCallingService.cpp  deNovoGenomeVariantCallingService.h  denovoGffLiftOverToUniqGffOutput.cpp  denovoGffLiftOverToUniqGffOutput.h  service.h
src/service/MSA/: cutWindow.cpp  cutWindow.h  reSdiFromMsa.cpp  reSdiFromMsa.h  transcriptRealignmentPversion.cpp  transcriptRealignmentPversion.h
src/service/reannotation/: TranscriptsTogenes.cpp  TranscriptsTogenes.h  reAnnotationAndExonerateAndNovo.cpp  reAnnotationAndExonerateAndNovo.h  runExonerate.cpp  runExonerate.h  transcriptRealignmentAndExonerate.cpp  transcriptRealignmentAndExonerate.h
src/tests/control/: myGffCoordinateLiftOver_test.cpp  myReAnnotationAndExonerateAndNovo_test.cpp
src/tests/impl/: deNovoGenomeVariantCalling_test.cpp  longest_test.cpp  orf_test.cpp
src/tests/myImportandFunction/: alignNeedlemanForTranscript_simd_avx2int32.cpp  alignNeedlemanWunsch_simd_test.cpp  alignSlidingWindow_test.cpp  alignTranscript.cpp  hengAlign_test.cpp
src/tests/service/: TransferAllExonWithSpliceAlignmentResult_test.cpp  TransferGffWithNucmerResult_test.cpp  UpdateVariants_test.cpp
src/tests/sourceCodeUnderStudy/: dagchainer.cpp
src/tests/std/: bitsetTest.cpp
src/util/: myutil.cpp  myutil.h  nucleotideCodeSubstitutionMatrix.cpp  parameters.cpp
